# ray_tracer

./: Cargo.toml  README.md
features/: rgb.feature  tuples.feature  vectors_and_points.feature
src/: color.rs  helpers.rs  lib.rs  main.rs  point.rs  tuples.rs  vector.rs
tests/: main.rs  rbg.rs  tuples.rs  vectors_and_points.rs  world.rs
