[package]
name = "ray-tracer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.51" # This is currently required to properly initialize the world in cucumber-rust
tokio = { version = "1.12.0", features = ["full"] }

[[test]]
name = "main" # This should be the same as the filename of your test target
harness = false # Allows Cucumber to print output instead of libtest

[dev-dependencies]
cucumber = { package = "cucumber_rust", version = "^0.9.0" }
